[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiv"
version = "0.2.0"
description = "A lightweight dependency injection library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["dependency-injection", "di", "injector", "ioc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyiv"
Documentation = "https://github.com/yourusername/pyiv#readme"
Repository = "https://github.com/yourusername/pyiv"
Issues = "https://github.com/yourusername/pyiv/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyiv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

